# neural_network

./: Cargo.toml
src/: arr.rs  layer.rs  lib.rs  loader.rs  main.rs  neuralnet.rs  trainer.rs
src/dataset/: mnist.rs  mod.rs  yolov5.rs
src/flat/: mod.rs
src/recursive/: computedevice.rs  dumper.rs  layer.rs  mod.rs
src/utilities/: arr.rs  loader.rs  mod.rs  perceptron.rs
