[package]
name = "pure_deepdream"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# serde-big-array = "0.4.1"
serde_json = "1.0.82"
serde_yaml = "0.9.2"
rand = "0.8.5"
image = "0.24"
clap = { version = "3.2.16", features = ["derive"] }
colored = "2.0.0"
rayon = "1.5.3"
vulkano = "0.31.0"
vulkano-shaders = "0.31.0"
bytemuck = "1.12.1"
bytemuck_derive = "1.2.1"